--- a/.gitignore
+++ b/.gitignore
@@ -484,3 +484,7 @@ $RECYCLE.BIN/
 *.swp
 API/appsettings.json
 API/reactivities.db
+API/reactivities.db-wal
+API/reactivities.db-shm
+API/reactivities.db-wal
+API/reactivities.db-shm
